--- a/sources/styles/app.css
+++ b/sources/styles/app.css
@@ -1,50 +1,9 @@
-.webixappstart{
-    opacity:0;
-}
-.webixapp{
-    transition: opacity 500ms;
-    opacity: 1;
-}
-
-/*data loading status*/
-.status_good, .status_error, .status_saving{
-	text-align: center;
-	margin-left:-12px;
-}
-.status_error{
-	color:red;
-}
-.status_good{
-	color:green;
-}
-
-/*login form*/
-.invalid_login .webix_header > div{
-    background: #FC3636;
-    transition: background 1s;
-}
-.invalid_login{
-    -webkit-animation: formshake .5s linear;
-}
-@-webkit-keyframes formshake {
-    8%, 41% {
-        -webkit-transform: translateX(-10px);
-    }
-    25%, 58% {
-        -webkit-transform: translateX(10px);
-    }
-    75% {
-        -webkit-transform: translateX(-5px);
-    }
-    92% {
-        -webkit-transform: translateX(5px);
-    }
-    0%, 100% {
-        -webkit-transform: translateX(0);
-    }
-}
 .app_header.webix_header{
-	text-align:center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 20vw;
+    text-transform:capitalize;
+    font-size: 24px;
 }
 .app_layout.webix_layout_clean{
 	background: #EBEDF0;
@@ -52,7 +11,24 @@
 .app_start .webix_template{
 	padding:12px 12px;
 }
-.app_menu .webix_icon{
-	font-size:20px;
-	vertical-align:middle;
+.app_menu{
+    margin-top: 0 !important;
+    margin-left: 1px !important;
+    height: auto !important;
+    width: auto !important;
 }
+.app_menu .webix_list_item{
+    font-size: 16px;
+    height: 45px !important;
+    line-height: 45px;
+}
+.app_menu .webix_list_item .item{
+    margin-left: 5px;
+}
+.app_menu .webix_list_item .fas{
+    width: 30px;
+    font-size: 20px;
+    text-align: center;
+}
+
+
