refact: create activities datatble and fix bugs in contacts-template and top view

--- a/sources/styles/contacts.css
+++ b/sources/styles/contacts.css
@@ -90,6 +90,11 @@ button{
     background-color: transparent !important;
 }
 
+button:hover{
+    background-color: #8189a7a2 !important;
+}
+
+
 button .webix_icon_btn{
     font-size: 16px;
     color: #475466 !important;
